add licence files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,12 @@
 name = "a800xl-utils"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/mrk-its/a800xl-utils"
+description = "misc utilities for mos-a800xl-none target (Atari 800XL/XE)"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 
 [dependencies]
 volatile-register = "0"
