add global_allocator and panic_handler

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,7 +3,7 @@ target = "mos-a800xl-none"
 rustflags = "-C panic=abort"
 
 [unstable]
-build-std = ["core"]
+build-std = ["core", "alloc"]
 
 [target.mos-a800xl-none]
 runner = ["/bin/echo", "can't run"]
