remove .vscode, add settings to devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,11 @@
 {
   "image": "mrkits/rust-mos",
-  "extensions": ["matklad.rust-analyzer", "serayuzgur.crates"]
+  "extensions": ["matklad.rust-analyzer", "serayuzgur.crates"],
+  "settings": {
+    "rust-analyzer.checkOnSave.allTargets": false,
+    "rust-analyzer.diagnostics.disabled": [
+        "unresolved-macro-call",
+        "macro-error"
+    ]
+  }
 }
