--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,10 +37,10 @@ name = "cls"
 name = "console"
 
 [[example]]
-name = "files"
+name = "draw"
 
 [[example]]
-name = "gfx"
+name = "files"
 
 [patch.crates-io]
 ufmt = {git="https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}
