--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "a800xl-utils"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/mrk-its/a800xl-utils"
@@ -8,6 +8,7 @@ description = "misc utilities for mos-a800xl-none target (Atari 800XL/XE)"
 documentation = "https://docs.rs/a800xl-utils"
 keywords = ["mos", "llvm-mos", "atari", "6502", "8-bit"]
 readme = "README.md"
+exclude = ["examples/data/*"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
