--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,5 +53,4 @@ name = "draw"
 name = "files"
 
 [patch.crates-io]
-ufmt = {git="https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}
-ufmt-write = {git = "https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}
+ufmt-stdio = {git = "https://github.com/mrk-its/ufmt-stdio"}
