--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "a800xl-utils"
-version = "0.2.1"
+version = "0.2.2-b1"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/mrk-its/a800xl-utils"
